--- a/index.html
+++ b/index.html
@@ -287,9 +287,11 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='5ea2e0cde2'>简介</h1>
-<p>蜂鸟数据是轻量级金融终端，提供主流金融市场的实时报价和历史数据。
-蜂鸟数据已经开启链上预言机开发，蜂鸟数据希望成为加密世界与现实世界的连接器，通过为加密世界提供合约可以直接调用的数据，令加密世界服务于每一个普通人。
-我们提供高度统一和强大的REST API和Websocket API，让您轻松获取金融数据。
+<p>蜂鸟数据是轻量级金融终端，提供主流金融市场的实时报价和历史数据。</p>
+
+<p>蜂鸟数据已经开启链上预言机开发，蜂鸟数据希望成为加密世界与现实世界的连接器，通过为加密世界提供合约可以直接调用的数据，令加密世界服务于每一个普通人。</p>
+
+<p>我们提供高度统一和强大的REST API和Websocket API，让您轻松获取金融数据。
 登录<a href="http://www.trochil.cn">蜂鸟数据</a>，注册成为我们的会员，即可免费使用API服务，每天可免费调用250次REST API，并试用7天Websocket，适用于所有接口和市场。</p>
 
 <p>覆盖市场和交易所：</p>
